--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Side Inc.",
   "dependencies": {
     "bootstrap": "5.1.3",
+    "node-sass": "^7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router": "6.2.2",
