--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "author": "Side Inc.",
   "dependencies": {
+    "axios": "^0.27.2",
     "bootstrap": "5.1.3",
+    "btoa": "^1.2.1",
     "node-sass": "^7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
