--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "bootstrap": "5.1.3",
     "btoa": "^1.2.1",
+    "buffer": "^6.0.3",
     "node-sass": "^7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
